src/style.scss
// RESET
*,
*::before,
*::after {
  margin: 0;
  padding: 0;
  box-sizing: border-box;
}

// VARIABLES
:root {
  --clr-almost-white: hsl(0, 0%, 98%);
  --clr-medium-gray: hsl(0, 0%, 41%);
  --clr-almost-black: hsl(0, 0%, 8%);

  --font-stack: 'Epilogue', sans-serif;
}

// MIXINS 
@mixin md {
  @media screen and (min-width: 35rem) {
    @content;
  }
}

// CLASSES
.btn {
  display: inline-block;
  outline: none;
  font-weight: 700;
  padding: 0.75rem 1.5rem;
  border-radius: 15px;
  transition: all 0.2s ease-in;

  &--primary {
    border: 2px solid transparent;
    background-color: black;
    color: var(--clr-almost-white);
  }

  &--outline {
    border: 2px solid;
    font-weight: 500;

    &:where(:focus, :hover) {
      color: black!important;
    }
  }
}

// UTILITIES
.flex {
  display: flex;
}

.justify-center {
  justify-content: center;
}

.items-center {
  align-items: center;
}

// MAIN STYLING
html, body {
  height: 100%;
}

body {
  font-family: var(--font-stack);
  font-weight: 500;
  line-height: 1.55;
  overflow-x: hidden;

  @include md {
    font-size: 1.125rem;
  }
}

h1 {
  line-height: 1.16;
}

img,
svg {
  display: block;
  max-width: 100%;
}

a {
  color: inherit;
  text-decoration: none;
}

a, button {
  transition: color 0.2s ease-in;

  &:where(:hover, :focus) {
    color: black!important;
    outline: none;
  }
}

ul {
  list-style: none;
}

button {
  background-color: transparent;
  border: none;
  cursor: pointer;
  font: inherit;
}

// SPECIFIC STYLING
.header {
  padding: 1rem;
  justify-content: space-between;
  position: absolute;
  top: 0;
  width: 100%;
  
  @include md {
    justify-content: start;
    padding: 2rem 2.5rem;
  }

  .navigation {
    display: none;

    @include md {
      display: flex;
      align-items: center;
      flex: 1;
      margin-left: 4rem;
      font-size: 0.875rem;
      line-height: 1rem;
    }

    a, button {
      color: var(--clr-medium-gray);
    }

    > ul {
      gap: 2.5rem;

      li {
        position: relative;
      }
    }

    .expand-btn {
      display: flex;
      align-items: center;
      gap: 0.5rem;

      img:nth-child(2) {
        display: none;
      }

      &.open {
        img:first-child {
          display: none;
        }

        img:nth-child(2) {
          display: revert;
        }
      }
    }

    .submenu {
      display: none;
      position: absolute;
      bottom: 0;
      right: 0;
      transform: translateY(calc(100% + 1.25rem));
      background-color: white;
      padding: 1.5rem;
      border-radius: 10px;
      box-shadow: 0px 10px 40px rgba(0, 0, 0, 0.15);
      width: max-content;
    }

    .expand-btn.open + .submenu {
      display: flex;
      flex-direction: column;
      gap: 1rem;

      li a {
        display: flex;
        align-items: center;
        gap: 1rem;
      }
    }

    .auth-links {
      margin-left: auto;

      a:nth-child(2) {
        margin-left: 2.5rem;
      }
    }
  }

  .mobile-menu-toggler {
    width: 40px;
    aspect-ratio: 1/1;
    line-height: 0;

    @include md {
      display: none;
    }
  }

  .mobile-menu {
    display: none;

    &.active {
      display: block;
    }
  }

  .mobile-menu .backdrop {
    position: fixed;
    inset: 0;
    background-color: var(--clr-almost-black);
    opacity: 0.75;
    cursor: pointer;
    animation: fadeIn 0.5s ease-in-out forwards;
  }

  .mobile-menu .menu {
    position: absolute;
    top: 0;
    right: 0;
    bottom: 0;
    width: 15rem;
    background-color: white;
    padding-inline: 1.5rem;
    padding-top: 4.875rem;
    transform: translateX(15rem);
    animation: slideFromRight 0.5s ease-in-out forwards;
    
    a, button {
      color: var(--clr-medium-gray);
    }

    ul {
      button {
        display: flex;
        align-items: center;
        gap: 1rem;

        img:nth-child(2) {
          display: none;
        }
      }

      .submenu {
        margin-left: 1.5rem;
        margin-top: 1rem;
        display: none;

        li a {
          display: flex;
          align-items: center;
          gap: 1rem;
        }
      }

      button.open {
        img:first-child {
          display: none;
        }

        img:nth-child(2) {
          display: revert;
        }
      }

      button.open + .submenu {
        display: block;
      }

      li + li {
        margin-top: 1rem;
      }
    }

    .mobile-menu-toggler {
      position: absolute;
      top: 1rem;
      right: 1rem;
    }

    .auth-links {
      margin-top: 2rem;
      text-align: center;
    }

    .auth-links a {
      font-size: 0.875rem;
      line-height: 1rem;
      margin-bottom: 1rem;
      display: inline-block;            

      &.btn {
        display: block;
      }
    }
  }
}

.hero {
  display: flex;
  flex-direction: column;
  padding-top: 0.5rem;

  @include md {
    flex-direction: row;
    gap: 125px;
    padding-left: 165px;
    padding-right: 130px;
    padding-top: 130px;
  }

  &__img {
    @include md {
      flex: 1 0 30rem;
    }
  }

  &__inner {
    order: 2;
    margin-top: 3rem;
    text-align: center;
    padding-inline: 1rem;

    @include md {
      order: initial;
      text-align: left;
      padding: 0;
    }
  }

  &__title {
    font-size: 2.25rem;
    font-weight: 700;
    margin-bottom: 1rem;

    @include md {
      font-size: 5rem;
      line-height: 1;
      margin-bottom: 3rem;
    }
  }

  &__lead {
    color: var(--clr-medium-gray);
    margin-bottom: 1.5rem;

    @include md {
      margin-bottom: 3.25rem;
      max-width: 445px;
    }
  }

  &__cta {
    margin-bottom: 3rem;

    &:where(:hover, :focus) {
      background-color: transparent;
      border: 2px solid;
    }

    @include md {
      padding: 0.875rem 1.875rem;
      margin-bottom: 6.75rem;
    }
  }

  &__client-logos {
    display: flex;
    align-items: center;
    justify-content: space-between;
  }
}

.footer {
  position: absolute;
  bottom: 1rem;
  left: 0;
  right: 0;
  font-size: 0.875rem;
  text-align: center;

  a {
    color: #7669ea;
  }
}

@keyframes slideFromRight {
  to {
    transform: translateX(0);
  }
}

@keyframes fadeIn {
  from {
    opacity: 0;
  }
}

